@@ -1,3 +1,9 @@
+2002-11-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03498] Re: parse <!-- ... --> in <script>
+	* file.c (HTMLlineproc0): tag in textarea
+	* frame.c (createFrameFile): fix comment processing in frame
+
 2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03497] incorrect image size
@@ -5242,4 +5248,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.570 2002/11/27 16:46:30 ukai Exp $
+$Id: ChangeLog,v 1.571 2002/11/28 16:00:33 ukai Exp $
